--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,47 @@ Title: What the Package Does (Title Case)
 Version: 0.1.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
+      "AKM", "Azad",
+      email = "kazad@imamu.edu.sa",
       role = c("aut", "cre")
     )
   )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
-License: What license is it under?
+Description: This package does ranks functional associations of biomarker genes using Network medicine-based proximity analysis.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
+Imports:
+    roxygen2,
+    dplyr,
+    ggplot2,
+    enrichplot,
+    data.table,
+    qdapTools,
+    ggplot2,
+    cowplot,
+    tidyr,
+    ComplexHeatmap,
+    clusterProfiler,
+    AnnotationDbi,
+    htmlwidgets,
+    networkD3,
+    imputeTS,
+    tibble,
+    dplyr,
+    stringr,
+    DOSE,
+    ggraph,
+    igraph,
+    hrbrthemes,
+    pbapply,
+    org.Hs.eg.db,
+    EnsDb.Hsapiens.v75,
+    circlize
+Suggests: 
+    stringr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Depends: 
+    R (>= 3.5)
