--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,31 +18,22 @@ Imports:
     roxygen2,
     dplyr,
     ggplot2,
-    enrichplot,
     data.table,
+Suggests: 
     qdapTools,
-    ggplot2,
-    cowplot,
     tidyr,
-    ComplexHeatmap,
-    clusterProfiler,
     AnnotationDbi,
     htmlwidgets,
-    networkD3,
+    forcats,
     imputeTS,
     tibble,
-    dplyr,
-    stringr,
-    DOSE,
     ggraph,
     igraph,
-    hrbrthemes,
-    pbapply,
+    stringr,
+    ggvenn,
     org.Hs.eg.db,
     EnsDb.Hsapiens.v75,
-    circlize
-Suggests: 
-    stringr,
+    circlize,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
