--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ importFrom(dplyr, distinct)
 importFrom(dplyr, ungroup)
 importFrom(dplyr, bind_rows)
 importFrom(dplyr, inner_join)
+importFrom(dplyr, recode)
+importFrom(dplyr, anti_join)
 importFrom(stringr, str_split)
 importFrom(data.table, fwrite)
 importFrom(qdapTools, list2df)
@@ -29,6 +31,8 @@ importFrom(igraph, "E<-")
 importFrom(igraph, shortest.paths)
 importFrom(igraph, graph_from_data_frame)
 importFrom(imputeTS, na.replace)
+importFrom(ggvenn, ggvenn)
+importFrom(forcats, fct_reorder)
 importFrom(ggraph, ggraph)
 importFrom(ggraph, geom_edge_link)
 importFrom(ggraph, geom_edge_arc)
@@ -38,18 +42,30 @@ importFrom(ggraph, geom_node_text)
 importFrom(ggplot2, ggsave)
 importFrom(ggplot2, aes)
 importFrom(ggplot2, aes_)
-importFrom(ggplot2, scale_color_gradientn)
+importFrom(ggplot2, geom_point)
+importFrom(ggplot2, geom_col)
+importFrom(ggplot2, geom_vline)
+importFrom(ggplot2, geom_segment)
+importFrom(ggplot2, scale_x_continuous)
+importFrom(ggplot2, scale_fill_manual)
+importFrom(ggplot2, scale_color_gradient)
 importFrom(ggplot2, scale_size)
+importFrom(ggplot2, coord_cartesian)
+importFrom(ggplot2, expansion)
 importFrom(ggraph, theme_graph)
 importFrom(ggplot2, theme)
+importFrom(ggplot2, theme_minimal)
+importFrom(ggplot2, element_blank)
 importFrom(ggplot2, element_rect)
 importFrom(pbapply, pbapply)
 importFrom(AnnotationDbi, select)
 importFrom(htmlwidgets, saveWidget)
 importFrom(tidyr, pivot_wider)
+importFrom(tidyr, pivot_longer)
 importFrom(tibble, as_tibble)
 importFrom(tibble, column_to_rownames)
-
+importFrom("stats", "p.adjust", "phyper", "pnorm", "sd")
+importFrom("utils", "data")
 
 # Export any functions or objects that you want to make available
 # outside of your package
