tidying documentation and updating metadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,5 @@
 exportPattern("^[[:alpha:]]+")
 
-importFrom(circlize, colorRamp2)
-importFrom(ComplexHeatmap, Heatmap)
-importFrom(ComplexHeatmap, Legend)
-importFrom(ComplexHeatmap, draw)
 importFrom(dplyr, filter)
 importFrom(dplyr, "%>%")
 importFrom(dplyr, select)
@@ -20,6 +16,7 @@ importFrom(dplyr, inner_join)
 importFrom(dplyr, recode)
 importFrom(dplyr, anti_join)
 importFrom(stringr, str_split)
+importFrom(data.table, fread)
 importFrom(data.table, fwrite)
 importFrom(qdapTools, list2df)
 importFrom(igraph, graph.data.frame)
@@ -30,15 +27,8 @@ importFrom(igraph, "V<-")
 importFrom(igraph, "E<-")
 importFrom(igraph, shortest.paths)
 importFrom(igraph, graph_from_data_frame)
-importFrom(imputeTS, na.replace)
 importFrom(ggvenn, ggvenn)
 importFrom(forcats, fct_reorder)
-importFrom(ggraph, ggraph)
-importFrom(ggraph, geom_edge_link)
-importFrom(ggraph, geom_edge_arc)
-importFrom(ggraph, geom_edge_arc0)
-importFrom(ggraph, geom_node_point)
-importFrom(ggraph, geom_node_text)
 importFrom(ggplot2, ggsave)
 importFrom(ggplot2, aes)
 importFrom(ggplot2, aes_)
@@ -57,9 +47,7 @@ importFrom(ggplot2, theme)
 importFrom(ggplot2, theme_minimal)
 importFrom(ggplot2, element_blank)
 importFrom(ggplot2, element_rect)
-importFrom(pbapply, pbapply)
 importFrom(AnnotationDbi, select)
-importFrom(htmlwidgets, saveWidget)
 importFrom(tidyr, pivot_wider)
 importFrom(tidyr, pivot_longer)
 importFrom(tibble, as_tibble)
