--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Imports:
     tibble,
     igraph,
     stringr,
+    cowplot,
     ggvenn,
     org.Hs.eg.db,
     EnsDb.Hsapiens.v75,
@@ -34,3 +35,6 @@ Imports:
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.5)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
