--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(igraph, shortest.paths)
 importFrom(igraph, graph_from_data_frame)
 importFrom(ggvenn, ggvenn)
 importFrom(forcats, fct_reorder)
+importFrom(ggplot2, ggplot)
 importFrom(ggplot2, ggsave)
 importFrom(ggplot2, aes)
 importFrom(ggplot2, aes_)
@@ -41,12 +42,13 @@ importFrom(ggplot2, scale_fill_manual)
 importFrom(ggplot2, scale_color_gradient)
 importFrom(ggplot2, scale_size)
 importFrom(ggplot2, coord_cartesian)
+importFrom(ggplot2, labs)
 importFrom(ggplot2, expansion)
-importFrom(ggraph, theme_graph)
 importFrom(ggplot2, theme)
 importFrom(ggplot2, theme_minimal)
 importFrom(ggplot2, element_blank)
 importFrom(ggplot2, element_rect)
+importFrom(cowplot, plot_grid)
 importFrom(AnnotationDbi, select)
 importFrom(tidyr, pivot_wider)
 importFrom(tidyr, pivot_longer)
